[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyespn"
authors = [{ name = "Zach Stocker", email = "zacharystocker@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"
description = "Wrapper for hidden ESPN API"
readme = "README.md"
classifiers = [
    # Should be one of:
    # "Development Status :: 3 - Alpha"
     "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable"
    #"Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    #"Programming Language :: Python :: 3",
    #"Programming Language :: Python :: 3.7",
    #"Programming Language :: Python :: 3.8",
    #"Programming Language :: Python :: 3.9",
    #"Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    #"Programming Language :: Python :: 3.12",
    #"Operating System :: OS Independent",
    #"Topic :: Sports :: Football",
    #"Topic :: Sports :: Basketball"
]
dependencies = []
dynamic = ["version"]
[project.urls]
Repository = "https://gitlab.com/zachstocker/espn-api"
[tool.setuptools.dynamic]
version = { attr = "pyespn.api.version.__version__" }
[tool.setuptools.packages.find]
# Only include packages under the 'espn' namespace. Do not include tests,
# benchmarks, etc.
include = ["pyespn*"]
[project.scripts]
nfl-player-stats = "espn.bin:get_nfl_players_historical_stats"
nfl-player-info = "espn.bin:get_player_metadata"
nfl-team-season-stats = "espn.bin:get_team_season_stats"
sports-api-urls = "espn.bin:get_all_sports_apis"